syntax = "proto3";

package aliasreader;

option go_package = "github.com/chain4travel/caminogo/proto/pb/aliasreader";

message ID {
  bytes id = 1;
}

message Alias {
  string alias = 1;
}

message AliasList {
  repeated string aliases = 1;
}

service AliasReader {
  rpc Lookup(Alias) returns (ID);
  rpc PrimaryAlias(ID) returns (Alias);
  rpc Aliases(ID) returns (AliasList);
}
