syntax = "proto3";

package subnetlookup;

option go_package = "github.com/chain4travel/caminogo/proto/pb/subnetlookup";

message SubnetIDRequest {
  bytes chain_id = 1;
}

message SubnetIDResponse {
  bytes id = 1;
}

service SubnetLookup {
  rpc SubnetID(SubnetIDRequest) returns (SubnetIDResponse);
}
